# hfplayground

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
hfplayground/: brainlm_data.py  data.py  extract.py  train.py  trainer.py  utils.py
hfplayground/brainlm_mae/: __init__.py  vit_image_finetuning_mlp_pred_head.py
hfplayground/brainlm_utils/: __init__.py  brainlm_trainer.py  metrics.py
hfplayground/data/: brainlm.py  prepare.py
hfplayground/models/brainlm_mae/: __init__.py  metrics.py  utils.py
hfplayground/resource/: README.md
hfplayground/resource/brainlm/: README.md
hfplayground/resource/brainlm/atlases/brainregion_coordinates.arrow/: data-00000-of-00001.arrow  dataset_info.json  state.json
hfplayground/utils/: metrics.py
notebooks/: cls_token_transfer_inference.ipynb  cls_token_zeroshot_inference.ipynb  create_arrow_dataset.ipynb  direct_transfer.py  finetuning.py  fov.ipynb  inference_compare_data_prep.ipynb  inference_finetune_vs_direct.ipynb  inspect_atlas.ipynb  inspect_brainlm_data_processing.ipynb  inspect_ds000030_fov.ipynb  test_pretrain_model.py  zero_chot_refactor.py  zero_shot_cls_token.py  zero_shot_learning.py
scripts/: direct_transfer.py  finetuning.py
src/: test_create_large_ds.py
tasks/: __init__.py  models.py  notebooks.py  prep.py
